# Vibesafe

./: .gitignore  README.md  pyproject.toml  setup.ps1  setup.sh
.github/workflows/: vibesafe-security.yml
vibesafe/: __init__.py  __main__.py  ai_triage.py  ci.py  config.py  cwe_database.py  engine.py  main.py  models.py  ui.py  utils.py
vibesafe/integrations/: __init__.py  codeql.py  gitleaks.py  nuclei.py  semgrep.py  trivy.py
vibesafe/patterns/: __init__.py  frameworks.py  injection.py  secrets.py  unsafe_code.py
vibesafe/phases/: __init__.py  phase01_recon.py  phase02_threat_model.py  phase03_architecture.py  phase04_sast.py  phase05_dependencies.py  phase06_config.py  phase07_auth.py  phase08_authz.py  phase09_input_validation.py  phase10_uploads.py  phase11_api.py  phase12_database.py  phase13_business.py  phase14_owasp.py  phase15_pentest.py  phase16_scanner.py  phase17_performance.py  phase18_cloud.py  phase19_logging.py  phase20_report.py
